# simplerST7735

./: CMakeLists.txt  README.md  simplerST7735.cpp  simplerST7735.h  simplerST7735_ex_ll.cpp  simplerST7735_priv.h
platformExample/longanNano/: gd32ST7735.cpp  gd32ST7735.h
platformExample/stm32duino/: CMakeLists.txt  stm32duinoST7735.cpp  stm32duinoST7735.h
